parser/tests/bad/for01-8.st
% range of a 'for' statement must have type 'int'
%   decreasing, id, end

for decreasing i: 3..1.0
  % empty
end for
